--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CLion2)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(CLion2 main.cpp)
+add_executable(CLion2 main.cpp utilities.cpp utilities.h MathFunctions.cpp MathFunctions.h)
